--- a/.github/工作流程/cnb.yml
+++ b/.github/工作流程/cnb.yml
@@ -1,36 +1,143 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: Get YouTube Live m3u8
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
+  schedule:
+    - cron: "0 */2 * * *"
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-18.04
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    - name: Install youtube-dl
+      run: |
+        sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
+        sudo chmod a+rx /usr/local/bin/youtube-dl
+    - name: Get ctitv.m3u8
+      run: |
+        touch ./ctitv.m3u8
+        sudo cat >./ctitv.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/ctitv/live)
+        EOL
+    - name: Get ttvnews.m3u8
+      run: |
+        touch ./ttvnews.m3u8
+        sudo cat >./ttvnews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/watch?v=xL0ch83RAK8)
+        EOL
+    - name: Get ftvnews.m3u8
+      run: |
+        touch ./ftvnews.m3u8
+        sudo cat >./ftvnews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/FTVLIVE/live)
+        EOL
+    - name: Get ctsnews.m3u8
+      run: |
+        touch ./ctsnews.m3u8
+        sudo cat >./ctsnews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/華視直播頻道/live)
+        EOL
+    - name: Get ctvnews.m3u8
+      run: |
+        touch ./ctvnews.m3u8
+        sudo cat >./ctvnews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/twctvnews/live)
+        EOL
+    - name: Get setlive.m3u8
+      run: |
+        touch ./setlive.m3u8
+        sudo cat >./setlive.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/三立LIVE新聞/live)
+        EOL
+    - name: Get setinews.m3u8
+      run: |
+        touch ./setinews.m3u8
+        sudo cat >./setinews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/setmoney159/live)
+        EOL
+    - name: Get ebcnews.m3u8
+      run: |
+        touch ./ebcnews.m3u8
+        sudo cat >./ebcnews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/newsebc/live)
+        EOL
+    - name: Get hyxw.m3u8
+      run: |
+        touch ./hyxw.m3u8
+        sudo cat >./hyxw.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/寰宇新聞頻道/live)
+        EOL
+    - name: Get tvbs.m3u8
+      run: |
+        touch ./tvbs.m3u8
+        sudo cat >./tvbs.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/TVBSNEWS01/live)
+        EOL
+    - name: Get tvbsnews.m3u8
+      run: |
+        touch ./tvbsnews.m3u8
+        sudo cat >./tvbsnews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/watch?v=V0WxUakDV7M)
+        EOL
+    - name: Get cctv4.m3u8
+      run: |
+        touch ./cctv4.m3u8
+        sudo cat >./cctv4.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/user/ChineseInternatioify/live)
+        EOL
+    - name: Get eftv.m3u8
+      run: |
+        touch ./eftv.m3u8
+        sudo cat >./eftv.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/user/EFTV01/live)
+        EOL
+    - name: Get dscj.m3u8
+      run: |
+        touch ./dscj.m3u8
+        sudo cat >./dscj.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/watch?v=ABn_ccXn_jc)
+        EOL
+    - name: Get sdtv.m3u8
+      run: |
+        touch ./sdtv.m3u8
+        sudo cat >./sdtv.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/channel/UCrVBXIxpYnjTk4ezn9F-fug/live)
+        EOL
+    - name: Get ctsshow.m3u8
+      run: |
+        touch ./ctsshow.m3u8
+        sudo cat >./ctsshow.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/c/TBSCTSSHOW/live)
+        EOL
+    - name: Get ebcyoyo.m3u8
+      run: |
+        touch ./ebcyoyo.m3u8
+        sudo cat >./ebcyoyo.m3u8 <<EOL
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        $(youtube-dl -g https://www.youtube.com/c/yoyotvebc/live)
+        EOL
+    - name: Get ctinews.m3u8
+      run: |
+        touch ./ctinews.m3u8
+        sudo cat >./ctinews.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/watch?v=lu_BJKxqGnk)
+        EOL
+    - name: Get gstv.m3u8
+      run: |
+        touch ./gstv.m3u8
+        sudo cat >./gstv.m3u8 <<EOL
+        $(youtube-dl -g https://www.youtube.com/channel/UCoo-jAsJgM8z09ddlhcBlSA/live)
+        EOL
+    - name : Upload artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: YTlive m3u8
+        path: .
+    - name: Git push assets to "YTlive" branch
+      run: |
+        git init
+        git config --local user.name "actions"
+        git config --local user.email "action@github.com"
+        git checkout -b YTlive
+        git add .
+        git commit -m "Update YTlive"
+        git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+        git push -f -u origin YTlive
