--- a/.github/workflows/cmn.yml
+++ b/.github/workflows/cmn.yml
@@ -116,8 +116,8 @@ jobs:
         EOL
     - name: Get gstv.m3u8
       run: |
-        touch ./tvbs.m3u8
-        sudo cat >./tvbs.m3u8 <<EOL
+        touch ./tvbszh.m3u8
+        sudo cat >./tvbszh.m3u8 <<EOL
         $(youtube-dl -g https://www.youtube.com/watch?v=hP6_jfCFxyQ)
         EOL
     - name : Upload artifact
