--- a/.github/workflows/cmn.yml
+++ b/.github/workflows/cmn.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         touch ./setlive.m3u8
         sudo cat >./setlive.m3u8 <<EOL
-        $(youtube-dl -g https://www.youtube.com/c/三立LIVE新聞/live)
+        $(youtube-dl -g https://www.youtube.com/watch?v=FoBfXvIOR6l)
         EOL
     - name: Get setinews.m3u8
       run: |
