--- a/.github/workflows/cmn.yml
+++ b/.github/workflows/cmn.yml
@@ -75,7 +75,7 @@ jobs:
       run: |
         touch ./tvbsnews.m3u8
         sudo cat >./tvbsnews.m3u8 <<EOL
-        $(youtube-dl -g https://www.youtube.com/watch?v=V0WxUakDV7M)
+        $(youtube-dl -g https://www.youtube.com/watch?v=2mCSYvcfhtc)
         EOL
     - name: Get dscj.m3u8
       run: |
