--- a/.github/workflows/cmn.yml
+++ b/.github/workflows/cmn.yml
@@ -57,7 +57,7 @@ jobs:
       run: |
         touch ./ebcnews.m3u8
         sudo cat >./ebcnews.m3u8 <<EOL
-        $(youtube-dl -g https://www.youtube.com/c/newsebc/live)
+        $(youtube-dl -g https://www.youtube.com/watch?v=R2iMq5LKXco)
         EOL
     - name: Get hyxw.m3u8
       run: |
