--- a/.github/workflows/cmn.yml
+++ b/.github/workflows/cmn.yml
@@ -99,7 +99,7 @@ jobs:
       run: |
         touch ./tvbszh.m3u8
         sudo cat >./tvbszh.m3u8 <<EOL
-        $(youtube-dl -g https://www.youtube.com/watch?v=hP6_jfCFxyQ)
+        $(youtube-dl -g https://www.youtube.com/watch?v=YvdcZ_jpLXE)
         EOL
     - name : Upload artifact
       uses: actions/upload-artifact@master
