--- a/.github/工作流/cmn.yml
+++ b/.github/工作流/cmn.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         touch ./ctsnews.m3u8
         sudo cat >./ctsnews.m3u8 <<EOL
-        $(youtube-dl -g https://www.youtube.com/watch?v=wM0g8EoUZ_E)
+        $(youtube-dl -g https://www.youtube.com/watch?v=wM0g8EoUZ_E.2)
         EOL
     - name: Get ctvnews.m3u8
       run: |
