--- a/.github/工作流/cmn.yml
+++ b/.github/工作流/cmn.yml
@@ -1,15 +1,23 @@
 name: Get YouTube Live m3u8
 on:
   schedule:
-    - cron: "0 */2 * * *"
+    - cron: '* 02 * * *'
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+    - name: config
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
     - name: Install youtube-dl
       run: |
-        sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
+        sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: Get ctitv.m3u8
       run: |
