--- a/.github/工作流/cmn.yml
+++ b/.github/工作流/cmn.yml
@@ -1,7 +1,7 @@
 name: Get YouTube Live m3u8
 on:
   schedule:
-    - cron: '* 02 * * *'
+    - cron = "0 0 */2 * * ?"
   pull_request:
     branches:
       - main
