--- a/.github/工作流/cmn.yml
+++ b/.github/工作流/cmn.yml
@@ -1,23 +1,15 @@
 name: Get YouTube Live m3u8
 on:
   schedule:
-    - cron = "0 0 */2 * * ?"
-  pull_request:
-    branches:
-      - main
+    - cron: "0 */2 * * *"
   workflow_dispatch:
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-    - name: config
-      run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
     - name: Install youtube-dl
       run: |
-        sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
+        sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: Get ctitv.m3u8
       run: |
